--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/**/*.ts", "use": "@vercel/node" }
-  ],
+  "builds": [{ "src": "api/**/*.ts", "use": "@vercel/node" }],
   "routes": [
+    { "src": "/", "dest": "/api/index" },
     { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
