--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch api/index.ts"
+    "dev": "tsx watch index.ts"
   },
   "keywords": [],
   "author": "",
