Some changes in the project for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-   "name": "my-new-project",
+  "name": "my-new-project",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch index.ts"
+    "dev": "tsx watch src/index.tsx",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -12,6 +21,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
