--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
-  "version": 2,
-  "builds": [{ "src": "api/**/*.ts", "use": "@vercel/node" }],
-  "routes": [
-    { "src": "/", "dest": "/api/index" },
-    { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "dist/index.js",
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["dist/**"] }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "dist/index.js"
+        }
+    ]
 }
