--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,12 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "jsx": "react-jsx",          // ✅ THIS enables JSX in .ts/.tsx files
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "outDir": "./dist" 
+  },
+  "include": ["src"],  // ✅ Add this too if your code is inside /src
+  "exclude": ["node_modules"] 
 }
