--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-express-vercel",
+  "name": "my-hello-world-project",
   "version": "1.0.0",
   "scripts": {
     "dev": "tsx watch api/index.ts"
@@ -9,8 +9,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "pre-commit": "^1.2.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.0.0"
   }
 }
