--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/estree": "^1.0.8",
     "@types/express": "^5.0.3",
+    "@types/json-schema": "^7.0.15",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
