--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/estree": "^1.0.8",
     "@types/express": "^5.0.3",
     "@types/json-schema": "^7.0.15",
+    "@types/node": "^24.0.3",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
