--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "react": "^19.1.0",
+    "@react-pdf/renderer": "^4.3.0"
   },
   "devDependencies": {
     "@types/estree": "^1.0.8",
     "@types/express": "^5.0.3",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.0.3",
+    "@types/react": "^19.0.0",       
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
