--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx api/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc"
   },
   "dependencies": {
     "express": "^5.1.0",
@@ -17,7 +16,7 @@
     "@types/express": "^5.0.3",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.0.3",
-    "@types/react": "^19.0.0",       
+    "@types/react": "^19.0.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
