--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
+    "module": "nodenext",
     "target": "es2020",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "jsx": "react-jsx",
     "outDir": "dist",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "jsx": "react-jsx"
   },
-  "include": ["api/**/*", "pdf/**/*"]
+  "include": ["api", "pdf"]
 }
