--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "new",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "dev": "tsx api/index.ts",
     "build": "tsc"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
+    "@vercel/node": "^5.3.0",
     "express": "^5.1.0",
     "react": "^19.1.0",
-    "@react-pdf/renderer": "^4.3.0"
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "@types/estree": "^1.0.8",
     "@types/express": "^5.0.3",
-    "@types/json-schema": "^7.0.15",
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.0.0",
+    "@types/node": "^20.19.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
