--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
     "module": "nodenext",
-    "target": "es2020",
-    "outDir": "dist",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
-    "strict": true,
-    "jsx": "react-jsx"
+    "strict": true
   },
-  "include": ["api", "pdf"]
+  "include": ["api"]
 }
