--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@react-pdf/renderer": "^4.3.0",
     "@vercel/node": "^5.3.0",
     "express": "^5.1.0",
+    "html-pdf-node": "^1.0.8",
+    "pdfkit": "^0.17.1",
+    "puppeteer-core": "^24.10.2",
     "react": "^19.1.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/html-pdf-node": "^1.0.2",
     "@types/node": "^20.19.1",
+    "@types/pdfkit": "^0.14.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
